# NEAR-Exchange-Blockchain

./: LICENSE  README.md
contract/: Cargo.toml  deploy.sh  deploy_testnet.sh
contract/events/: Cargo.toml
contract/orderbook-rs/: Cargo.toml
contract/orderbook-rs/src/: lib.rs
contract/orderbook-rs/src/engine/: order_queues.rs  orderbook.rs
contract/src/: account.rs  asset.rs  errors.rs  lib.rs  settlement.rs  storage.rs
src/: .env  .gitignore  .prettierrc  App.vue  README copy.md  README.md  components.d.ts  config.js  index.html  main.js  package-lock.json  package.json  typed-router.d.ts
src/api/: api.js  index.js
src/assets/: tailwind.css
src/components/: Assets.vue  ConnectWallet.vue  CreateOrderModal.vue  DropDown.vue  Hero.vue  KLineWidget.vue  MarketHistory.vue  Navbar.vue  OrderBook.vue  RangeSlider.vue  TradeBar.vue  TradeFrom.vue  TradingView.vue  TradingViewSimple.vue  UserTrade.vue  Volume.vue  WalletModal.vue
src/components/footer/: Footer.vue  TradeFooter.vue
src/components/modal/: DialogDeposit.vue  DialogStorage.vue  DialogWithdraw.vue  DropDown.vue  WithdrawDropdown.vue
src/config/: config.js  config_Godwoken.js  market_list.json  tokenList.js  tokenList_Godwoken.json
src/contract/: README.md  env.sh
src/contract/events/src/: lib.rs
src/contract/orderbook-rs/src/engine/: domain.rs  (+3 more)
src/contract/src/: external.rs  ft_balances.rs  market.rs  owner.rs  types.rs
src/router/: index.js
src/store/: index.js
src/store/modules/: exchange.js
src/utils/: axios.js  socket.js  token.js
src/views/: Faucet.vue  Home.vue  Trade.vue
