[package]
name = "contract"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"
uint = { version = "0.9.3", default-features = false }
orderbook = {path = "./orderbook-rs/"}
once_cell = "1.4.1"
parking_lot = "0.11.1"
events = {path = "./events/"}

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.8"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []